--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ pytest-cov = "^6.0.0"
 taskipy = "^1.14.1"
 ruff = "^0.11.2"
 pytest-asyncio = "^0.26.0"
+freezegun = "^1.5.1"
+factory-boy = "^3.3.3"
 
 [tool.ruff]
 line-length = 79
